<resources>
    <string name="app_name">MPCAndroidApp</string>
    <string name="site">Site:</string>
    <string name="name">Name</string>
    <string name="fs">FS:</string>
    <string name="contents">Contents:</string>
    <string name="secondaryContents">Secondary Contents:</string>
    <string name="feature_nums">Feature #\'s:</string>
    <string name="east">Easting:</string>
    <string name="north">Northing:</string>
    <string name="level">Level:</string>
    <string name="depth">Depth:</string>
    <string name="mbd">MBD:</string>
    <string name="date">DATE:</string>
    <string name="excavator">Excavator:</string>
    <string name="submit">Submit</string>
    <string name="comments">Comments:</string>
    <string name="print">print/save</string>
    <string name="sessionPage">Sessions</string>
    <string name="qrPage">QR Codes</string>
    <string name="edit">Edit QR</string>
    <string name="add">Add</string>
    <string name="export">Export</string>
    <string name="ipAddress">IP ADDRESS</string>
    <string name="port">PORT</string>
    <string name="delete">DELETE</string>
</resources>
